--- a/index.html
+++ b/index.html
@@ -169,8 +169,6 @@
 
                     f2Label = d3.select(this).datum()
                     f2LabelIndex = checkedLabels.indexOf(f2Label)
-                    console.log(f2Label)
-                    console.log(f2LabelIndex)
                     // check if f2Label is in checkedLabels, add it
                     if (f2LabelIndex === -1) {
                         checkedLabels.push(f2Label);
@@ -179,20 +177,28 @@
                         checkedLabels.splice(f2LabelIndex, 1);
                     }
 
-                    // filtering the checkbox data
-                    // basically estelle couldn't figure out how to filter with a list
-                    // so it makes subset using d3.filter for each item in checkedLabels and then concats it
-                    moreFilteredData = [];
-                    for (let i = 0; i < checkedLabels.length; i++) {
-                        checkData = tryingStuff.filter(d => d['filter2'] == checkedLabels[i]);
-                        console.log('checkedLabels', checkedLabels)
-                        console.log('check', checkData)
-                        moreFilteredData = moreFilteredData.concat(checkData);
-
-                        console.log('working', moreFilteredData);
-
-                        drawPoints(moreFilteredData);
+                    if (checkedLabels.length == 0) {
+                        drawPoints(tryingStuff);
                     }
+
+                    else {
+                        // filtering the checkbox data
+                        // basically estelle couldn't figure out how to filter with a list
+                        // so it makes subset using d3.filter for each item in checkedLabels and then concats it
+                        moreFilteredData = [];
+                        for (let i = 0; i < checkedLabels.length; i++) {
+                            checkData = tryingStuff.filter(d => d['filter2'] == checkedLabels[i]);
+                            console.log('checkedLabels', checkedLabels)
+                            // console.log('check', checkData)
+                            moreFilteredData = moreFilteredData.concat(checkData);
+
+                            // console.log('working', moreFilteredData);
+
+                            drawPoints(moreFilteredData);
+                        }
+                    }
+
+
                 }
 
 
@@ -322,7 +328,7 @@
                 viewport.on("click", function (event) {
                     viewport.selectAll("circle.radius_circle").remove();
 
-                    dots = viewport.append("circle")
+                    viewport.append("circle")
                         .attr("class", "radius_circle")
                         .attr("cx", d3.pointer(event)[0])
                         .attr("cy", d3.pointer(event)[1])
@@ -333,18 +339,24 @@
                         .call(drag);
 
                     updateCircleSelection(d3.pointer(event)[0], d3.pointer(event)[1]);
-                    updateCircleSelection(d3.pointer(event)[0], d3.pointer(event)[1]);
 
                 })
                 // These are the dots that are in the circle and should be in the list
                 var selectedPoints = []
                 // Find what restaurants are contained within the circle
                 function updateCircleSelection(x, y) {
+                    // console.log('updatecircleselection');
+                    // console.log(event);
 
                     x1 = x
                     y1 = y
 
-                    highlightedPoints = viewport.selectAll("circle.dots").filter(function (d) {
+                    console.log(x1, y1);
+
+                    selectedPoints = [];
+
+                    viewport.selectAll("circle.dots").each(function (d) {
+
                         current_circle_radius = viewport.selectAll("circle.radius_circle").attr("r")
 
                         x2 = projection(d.POSITION)[0]
@@ -354,47 +366,64 @@
                             (x1 - x2) ** 2 +
                             (y1 - y2) ** 2);
 
-                        return dist <= current_circle_radius;
-                    });
+                        if (dist <= current_circle_radius) {
+                            selectedPoints.push(d);
+                        }
+
+
+                    })
 
                     // call function to generate list of restaurants
-                    generateRestaurantList(highlightedPoints);
-
+                    generateRestaurantList(selectedPoints);
                 }
 
                 let table = d3.select("#listContainer").append("table");
 
-                function generateRestaurantList(circles) {
+                function generateRestaurantList(points) {
 
                     table.selectAll('tr').remove();
                     table.selectAll('td').remove();
 
-                    let kvPairs = Object.assign({}, circles._groups[0]);
+                    let rowCopy = Object.assign({}, points); // shallow copy
+                    let title = rowCopy.title;
+                    delete rowCopy.title;
 
+                    let kvPairs = Object.entries(rowCopy);
+                    console.log('kvPairs')
+                    console.log(kvPairs);
 
-                    previousR = 0;
-
-                    Object.keys(kvPairs).forEach(function (key) {
+                    kvPairs.forEach((d) => {
+                        // estelle added link to yelp page, she will figure out hover later
                         row = table.append("tr")
                             .attr('class', 'rowR')
-                            .on("mouseover", function(event){
-                                previousR = d3.select(kvPairs[key]).attr("r")
-                                d3.select(kvPairs[key]).attr("r", previousR * 2);
-                            })
-                            .on("mouseout", function(event){
-                                d3.select(kvPairs[key]).attr("r", previousR);})
                             .append('a')
-                            .attr('href', d3.select(kvPairs[key]).datum()['url'])
+                            .attr('href', d[1]['url'])
                             .attr('target', '_blank');
-                        row.append("strong").text(d3.select(kvPairs[key]).datum()['name']);
+                        row.append("strong").text(d[1]['name']);
 
                         ratingrow = row.append("tr");
                         ratingrow.append("td").text("rating:");
-                        ratingrow.append("td").text(d3.select(kvPairs[key]).datum()['rating']);
+                        ratingrow.append("td").text(d[1]['rating']);
 
                         addressrow = row.append("tr");
                         addressrow.append("td").text("address:");
-                        addressrow.append("td").text(d3.select(kvPairs[key]).datum()['LOCATION']['address']);
+                        addressrow.append("td").text(d[1]['LOCATION']['address']);
+
+                        // row.style("background-color", "lightgray");
+
+                        // console.log(table.selectAll('tr'))
+                        table.selectAll('tr').on("mouseover", function (event, d) {
+                            console.log('d')
+                            console.log(d3.select(this));
+                        })
+                        // table.selectAll('.rowr').each(function(d){
+                        //     d.on("mouseover", function() {
+                        //         console.log('hello')
+                        //         console.log(d);
+                        // })
+
+                        //      })
+
                     });
                 }
 
